# how-to-basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  engine.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/pingpong/: main.py
homework_05/: app.py
homework_05/templates/: base.html  meme.html
